--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>The reset</title>
 </head>
 <body>
-    <h1>Novo começo!</h1>
+    <table>
+        <tr>
+            <th>Nome produto</th>
+            <th>Tamanho</th>
+            <th>Cor</th>
+        </tr>
+        <tr>
+            <td>Camisa</td>
+            <td>P</td>
+            <td>Azul</td>
+        </tr>
+        <tr>
+            <td>Camisa</td>
+            <td>P</td>
+            <td>Azul</td>
+        </tr>
+        <tr>
+            <td>Camisa</td>
+            <td>P</td>
+            <td>Azul</td>
+        </tr>
+        
+    </table>
 </body>
 </html>
