--- a/index.html
+++ b/index.html
@@ -6,28 +6,17 @@
     <title>The reset</title>
 </head>
 <body>
-    <table>
-        <tr>
-            <th>Nome produto</th>
-            <th>Tamanho</th>
-            <th>Cor</th>
-        </tr>
-        <tr>
-            <td>Camisa</td>
-            <td>P</td>
-            <td>Azul</td>
-        </tr>
-        <tr>
-            <td>Camisa</td>
-            <td>P</td>
-            <td>Azul</td>
-        </tr>
-        <tr>
-            <td>Camisa</td>
-            <td>P</td>
-            <td>Azul</td>
-        </tr>
-        
-    </table>
+    <ol>
+        <li>Arroz</li>
+        <li>Feijão</li>
+        <li>Leite</li>
+        <li>Tomate</li>
+    </ol>
+    <ol type="A">
+        <li>BMW</li>
+        <li>Audi</li>
+        <li>Mercedes</li>
+        <li>Volkswagen</li>
+    </ol>
 </body>
 </html>
