listas nao ordenadas

--- a/index.html
+++ b/index.html
@@ -6,17 +6,11 @@
     <title>The reset</title>
 </head>
 <body>
-    <ol>
-        <li>Arroz</li>
-        <li>Feijão</li>
-        <li>Leite</li>
-        <li>Tomate</li>
-    </ol>
-    <ol type="A">
-        <li>BMW</li>
-        <li>Audi</li>
-        <li>Mercedes</li>
-        <li>Volkswagen</li>
-    </ol>
+    <ul style="list-style-type: none">
+        <li>Tomar café da manhã</li>
+        <li>Trabalhar</li>
+        <li>Lavar café</li>
+        <li>Escovar</li>
+    </ul>
 </body>
 </html>
